Use valueOf instead of deprecated Long/Double constructors.